# etta_app_update

./: .gitignore  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: gen_curriculum.py  gen_curriculum_svg.mjs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  commands_ai.rs  commands_m3.rs  commands_placement.rs  contract.rs  db.rs  export.rs  gamification.rs  keychain.rs  lib.rs  main.rs  mastery.rs  samples.rs  schema.sql  settings.rs  util.rs  validate.rs
src-tauri/src/adaptive/: mastery_calc.rs  mod.rs  session.rs  sm2.rs
src-tauri/src/ai/: client.rs  mod.rs  models.rs  prompt.rs  quiz_schema.rs  rate_limit.rs  system_prompt.txt
src-tauri/src/curriculum/: mod.rs
src-tauri/src/curriculum/data/: algebra.json  astrophysics.json  classical_mechanics.json  differential_equations.json  electromagnetism.json  linear_algebra.json  multivariable_calculus.json  precalculus.json  quantum_mechanics.json  single_variable_calculus.json  thermodynamics.json  trigonometry.json
src-tauri/src/grading/: math_eq.rs  mod.rs
src/assets/: curriculum-map-positions.json
src/components/: ApiKeyHint.tsx  AppLayout.tsx  Chart.test.tsx  Chart.tsx  ConceptList.test.tsx  ConceptList.tsx  CurriculumDiagram.tsx  GamificationProvider.tsx  OnboardingGate.test.tsx  OnboardingGate.tsx  ProgressIndicators.tsx  RichText.test.tsx  RichText.tsx  markdown.test.ts  markdown.ts
src/components/ui/: Button.test.tsx  Button.tsx  Card.tsx  ErrorToast.test.tsx  ErrorToast.tsx  InlineError.tsx  OfflineNotice.test.tsx  OfflineNotice.tsx  Skeleton.tsx  Spinner.tsx  index.ts
src/lib/: chartSpec.test.ts  chartSpec.ts  cn.ts  ipc.test.ts  ipc.ts  labels.test.ts  labels.ts  math.test.ts  math.ts  plotExpr.test.ts  plotExpr.ts  theme.test.ts  theme.ts  useLessonCache.ts  useOnline.ts  useStudyTimer.test.tsx  useStudyTimer.ts
src/pages/: DashboardPage.tsx  LessonPage.test.tsx  LessonPage.tsx  OnboardingPage.test.tsx  OnboardingPage.tsx  PlacementPage.test.tsx  PlacementPage.tsx  QuizPage.test.tsx  QuizPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  placeholders.tsx
src/stores/: useCurriculumStore.ts  useDailyProgressStore.test.ts  useDailyProgressStore.ts  useGamificationStore.ts  useLeaveGuardStore.ts  useOnboardingStore.ts  useSessionStore.ts  useSettingsStore.ts
src/styles/: theme.css
src/test/: setup.ts
src/types/: contract.roundtrip.test.ts  contract.ts
src/types/__generated__/: contract-fixture.json
