[package]
name = "etta"
version = "0.0.0"
description = "Etta — adaptive, gamified, offline-first learning app."
authors = ["Etta"]
edition = "2021"
rust-version = "1.77"

[lib]
# Etta targets macOS desktop only, so the library is a plain rlib. (Tauri's
# mobile targets would also need "staticlib"/"cdylib"; add them only if mobile
# support is introduced — they force linking the full GUI graph for every
# `cargo test`, which is unnecessary for a desktop-only build.)
name = "etta_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Auto-updater (milestone 5, ship item #16). Desktop only — gated so headless
# Linux CI (which only runs `cargo test` on the library) does not require the
# updater's platform plumbing, while macOS release builds include it.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tokio: scoped features ONLY — never "full" (Cargo hygiene requirement).
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
# futures-util: only StreamExt, for consuming the SSE byte stream in lesson/
# explain streaming. No executor — tokio is the runtime.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# rusqlite with the bundled feature for a static SQLite build.
rusqlite = { version = "0.40", features = ["bundled"] }
# keyring 4.x auto-selects the platform-native store per target (Keychain on
# macOS); no cargo features are needed. The API key lives ONLY in the OS
# keychain (blocklist #39), never on disk.
# keyring 3.x: self-contained `Entry::new(service, user)` API with the native
# platform store built in (Keychain on macOS via `apple-native`). The API key
# lives ONLY in the OS keychain (blocklist #39), never on disk. The `mock`
# feature backs the keychain set/has/delete test in this headless Linux CI.
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
# No `hmac` crate: slim v1 does NOT HMAC the content cache (the threat model —
# a user tampering with their own learning content — is self-defeating). The
# SQLite DB under FileVault is the security boundary. See blocklist #0b.
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"

[features]
# Default Tauri schema feature wiring; no macos-private-api.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
